--- a/eventb.html
+++ b/eventb.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div class="container">
-      <form id="event-form">
+      <form
+        id="event-form"
+        action="https://script.google.com/macros/s/AKfycbyb8CxzsY3Y6uZgMCGUmrybOo7VXk9Q4behcWsS0th5pC7FRC-U35mqsmOFCU4jQ0j3/exec"
+        method="post"
+      >
         <h2>📢 단 1분! 투표만 해도 영화 티켓 자동 응모!</h2>
         <div class="poster-row">
           <div class="poster">
