--- a/eventa.html
+++ b/eventa.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div class="container">
-      <form id="event-form">
+      <form
+        id="event-form"
+        action="https://script.google.com/macros/s/AKfycbyb8CxzsY3Y6uZgMCGUmrybOo7VXk9Q4behcWsS0th5pC7FRC-U35mqsmOFCU4jQ0j3/exec"
+        method="post"
+      >
         <h2>🎬 가장 기대되는 영화 1편 선택하고 🎟 예매권 받자!</h2>
         <div class="poster-row">
           <div class="poster">
