--- a/eventa.html
+++ b/eventa.html
@@ -13,6 +13,7 @@
         id="event-form"
         action="https://script.google.com/macros/s/AKfycbyb8CxzsY3Y6uZgMCGUmrybOo7VXk9Q4behcWsS0th5pC7FRC-U35mqsmOFCU4jQ0j3/exec"
         method="post"
+        target="invisible_iframe"
       >
         <h2>🎬 가장 기대되는 영화 1편 선택하고 🎟 예매권 받자!</h2>
         <div class="poster-row">
@@ -59,6 +60,7 @@
         <input type="hidden" name="variant" value="A" />
         <button type="submit">이벤트 참여하기</button>
       </form>
+      <iframe name="invisible_iframe" style="display: none"></iframe>
     </div>
   </body>
 </html>
