--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <span id="popup-close">&times;</span>
         </div>
       </div>
+      <button id="popup-open" class="popup-button" style="display: none">
+        🎬 이벤트 다시 보기
+      </button>
       <header>
         <nav>
           <div class="logo">
