--- a/eventa.html
+++ b/eventa.html
@@ -15,7 +15,10 @@
         method="post"
         target="invisible_iframe"
       >
-        <h2>🎬 가장 기대되는 영화 1편 선택하고 🎟 예매권 받자!</h2>
+        <h2>
+          🎬 가장 기대되는 영화 1편<br />
+          선택하고 🎟 예매권 받자!
+        </h2>
         <div class="poster-row">
           <div class="poster">
             <img src="./movie01.jpg" width="250" />
