--- a/eventb.html
+++ b/eventb.html
@@ -15,7 +15,10 @@
         method="post"
         target="invisible_iframe"
       >
-        <h2>📢 단 1분! 투표만 해도 영화 티켓 자동 응모!</h2>
+        <h2>
+          📢 단 1분! 투표만 해도<br />
+          영화 티켓 자동 응모!
+        </h2>
         <div class="poster-row">
           <div class="poster">
             <img src="./movie01.jpg" width="250" />
