--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="FIMLI" />
+    <meta property="og:url" content="https://movieevnetpage.netlify.app/" />
+    <meta
+      property="og:image"
+      content="https://cromidi.cafe24.com/upload/dsec.png"
+    />
+    <meta property="og:image:alt" content="Fun movie information site FIMLI" />
+    <meta
+      property="og:description"
+      content="Anyone can check movie information easily and conveniently. FIMLI"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://cromidi.cafe24.com/upload/favicon-96x96.png"
+    />
     <!-- fontawesome -->
     <script
       src="https://kit.fontawesome.com/3f2ea24883.js"
