--- a/eventb.html
+++ b/eventb.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-T76R6424");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="FIMLI" />
@@ -23,6 +37,16 @@
     <title>eventB</title>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-T76R6424"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="container">
       <form
         id="event-form"
@@ -31,8 +55,8 @@
         target="invisible_iframe"
       >
         <h2>
-          📢 단 1분! 투표만 해도<br />
-          영화 티켓 자동 응모!
+          📢 영화를 좋아하는 사람들이 직접 뽑은 기대작!<br />
+          지금 가장 기대되는 영화를 직접 선택하세요
         </h2>
         <div class="poster-row">
           <div class="poster">
