--- a/eventb.html
+++ b/eventb.html
@@ -100,7 +100,7 @@
         /></label>
         <label>4.이메일<input type="email" name="email" required /></label>
         <input type="hidden" name="variant" value="B" />
-        <button type="submit">이벤트 참여하기</button>
+        <button id="eventb_submit" type="submit">이벤트 참여하기</button>
       </form>
       <iframe name="invisible_iframe" style="display: none"></iframe>
     </div>
