--- a/eventa.html
+++ b/eventa.html
@@ -90,7 +90,7 @@
         method="post"
         target="invisible_iframe"
       >
-        <span id="event-close">&times;</span>
+        <span id="eventA-close">&times;</span>
         <h2>
           🎬 오늘, 당신의 마음을 움직일 영화는?<br />
           영화 기대평 남기면, 🎟 예매권 드려요!
