--- a/eventb.html
+++ b/eventb.html
@@ -90,7 +90,7 @@
         method="post"
         target="invisible_iframe"
       >
-        <span id="event-close">&times;</span>
+        <span id="eventB-close">&times;</span>
         <h2>
           📢 영화를 좋아하는 사람들이 직접 뽑은 기대작!<br />
           지금 가장 기대되는 영화를 직접 선택하세요
