--- a/eventa.html
+++ b/eventa.html
@@ -92,8 +92,10 @@
       >
         <span id="eventA-close">&times;</span>
         <h2>
-          🎬 오늘, 당신의 마음을 움직일 영화는?<br />
-          영화 기대평 남기면, 🎟 예매권 드려요!
+          🎬 오늘, 당신의 마음을<br />
+          움직일 영화는?<br /><br />
+          영화 기대평 남기면,<br />
+          🎟 예매권 드려요!
         </h2>
         <div class="poster-row">
           <div class="poster">
