--- a/eventb.html
+++ b/eventb.html
@@ -92,8 +92,10 @@
       >
         <span id="eventB-close">&times;</span>
         <h2>
-          📢 영화를 좋아하는 사람들이 직접 뽑은 기대작!<br />
-          지금 가장 기대되는 영화를 직접 선택하세요
+          📢 영화를 좋아하는 사람들이<br />
+          직접 뽑은 기대작!<br /><br />
+          지금 가장 기대되는 영화를<br />
+          직접 선택하세요
         </h2>
         <div class="poster-row">
           <div class="poster">
